# ufrgs_wam

ufrgs_wam/: CMakeLists.txt  package.xml
wam_controllers/: CMakeLists.txt  README  package.xml  wam_controllers_plugins.xml
wam_controllers/config/: computed_torque_control.yaml
wam_controllers/doc/: urdf2kdl.txt
wam_controllers/include/wam_controllers/: computed_torque_controller.h
wam_controllers/launch/: computed_torque.launch  computed_torque_table.launch
wam_controllers/scripts/: set_home.sh  set_initial.sh
wam_controllers/src/: computed_torque_controller.cpp
wam_description/: CMakeLists.txt  package.xml
wam_description/launch/: wam.launch  wam_sim.launch  wam_table.launch  wam_table_sim.launch
wam_description/xacro/: table.urdf.xacro  wam.urdf.xacro  wam_base.urdf.xacro  wam_j1.urdf.xacro  wam_j2.urdf.xacro  wam_j3.urdf.xacro  wam_j4.urdf.xacro  wam_j5.urdf.xacro  wam_j6.urdf.xacro  wam_j7.urdf.xacro  wam_table.urdf.xacro  wam_tool_plate.urdf.xacro  wam_world.urdf.xacro
